    - Spring.RevertOriginalHeightMap
    - Spring.SetOriginalHeightMapFunc
    - Spring.AddOriginalHeightMap
    - Spring.SetOriginalHeightMap
 - Added Spring.GetRenderFeaturesDrawFlagChanged to report all features whose draw flags have
   changed since the last sim frame.
 - Added Spring.GetRenderUnitsDrawFlagChanged to report all units whose draw flags have changed
   since the last sim frame.

Maps:
 - New bumpwater params, most of these were just hard-coded values:
    - waveOffsetFactor    (0.0)
		- waveLength          (0.15)
		- waveFoamDistortion  (0.05)
		- waveFoamIntensity   (0.5)
		- causticsResolution  (75.0)
		- causticsStrength    (0.08)

Map:
 - The original/base height map is now editable, so the height map as read from the map file is
   held separately. Both the map file height map and the original/base height map are saved and
   loaded with save/load feature.

Misc:
 - the `useFootPrintCollisionVolume` unit def tag now takes precedence over the default sphere
   that appears when `collisionVolumeScales` are zero. This means that units no longer have to
   define a bogus custom colvol just to prevent the default sphere.
 - don't warn for archive checksum mismatch if server's checksum is zero
 - 3D and Cubemap .dds textures supported in Lua
 - deprecate DISALLOW_RELEASE_BINDINGS and Up+ modifier for keysets, a
   warning is displayed if attempted to bind. No change in behavior
 - /keysave and /keyprint now preserves the binding order, providing a better output
 - add support for f16-f24 key and scancodes; keycode support requires SDL1
   keycode deprecation

Sim:
 - Added a new 'b' designator for yardmaps to declare an area that is buildable, but is not
   walkable. This allows for the current method of upgradable buildings to create a locking
   pattern that won't break pathing.
 - Reserved MaxParticles *2 for unsynced projectile-container vector to avoid a re-alloc during