@@ -16,6 +16,7 @@ public:
 	virtual bool Draw() { return true; }
 	virtual bool Update() { return true; }
 	virtual int KeyPressed(int keyCode, int scanCode, bool isRepeat) { return 0; }
+	virtual int KeyMapChanged() { return 0; }
 	virtual int KeyReleased(int keyCode, int scanCode) { return 0; }
 	virtual int TextInput(const std::string& utf8Text) { return 0; }
 	virtual int TextEditing(const std::string& utf8Text, unsigned int start, unsigned int length) { return 0; }
