@@ -275,6 +275,7 @@ class CEventClient
 		virtual void Update();
 		virtual void UnsyncedHeightMapUpdate(const SRectangle& rect);
 
+		virtual bool KeyMapChanged();
 		virtual bool KeyPress(int keyCode, int scanCode, bool isRepeat);
 		virtual bool KeyRelease(int keyCode, int scanCode);
 		virtual bool TextInput(const std::string& utf8);
