@@ -92,6 +92,7 @@
 
 	SETUP_EVENT(Update,         MANAGED_BIT | UNSYNCED_BIT)
 
+	SETUP_EVENT(KeyMapChanged,  MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(KeyPress,       MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(KeyRelease,     MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
 	SETUP_EVENT(TextInput,      MANAGED_BIT | UNSYNCED_BIT | CONTROL_BIT)
